# async-ffi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml
.github/workflows/: ci.yaml  future_proof.yaml
link_tests/: Makefile
link_tests/executor/: Cargo.toml
link_tests/executor-c/: main.c
link_tests/executor-rust/: Cargo.toml
link_tests/executor-rust/src/: main.rs
link_tests/executor/src/: main.rs
link_tests/plugin-c/: plugin.c
link_tests/plugin-rust/: Cargo.toml
link_tests/plugin-rust/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: test.rs
macros/tests/ui/: invalid-item.rs  invalid-item.stderr  warnings.rs  warnings.stderr
src/: lib.rs
tests/: basic.rs  test_tokio.rs
