[package]
name = "async-ffi"
version = "0.5.0"
edition = "2018"
description = "FFI-compatible `Future`s"
keywords = ["ffi", "async", "futures"]
categories = ["asynchronous", "network-programming", "development-tools::ffi"]
license = "MIT"
repository = "https://github.com/oxalica/async-ffi"
readme = "README.md"
exclude = ["/link_tests", "/.github"]
rust-version = "1.56" # syn 2 requires edition 2021

[dependencies]
abi_stable = { version = "0.11", default-features = false, optional = true }
macros = { version = "0.5", package = "async-ffi-macros", path = "./macros", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[workspace]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
