[package]
name = "async-ffi-macros"
version = "0.4.1"
edition = "2018" # Follows async-ffi
description = "Macros for async-ffi"
keywords = ["ffi", "async", "futures"]
categories = ["asynchronous", "network-programming", "development-tools::ffi"]
license = "MIT"
repository = "https://github.com/oxalica/async-ffi"
readme = "../README.md"
rust-version = "1.49" # Follows async-ffi

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
async-ffi = { version = "0.4", path = ".." }
