[package]
name = "async-ffi-macros"
version = "0.5.0"
edition = "2018" # Follows async-ffi
description = "Macros for async-ffi"
keywords = ["ffi", "async", "futures"]
categories = ["asynchronous", "network-programming", "development-tools::ffi"]
license = "MIT"
repository = "https://github.com/oxalica/async-ffi"
readme = "../README.md"
rust-version = "1.56" # syn 2 requires edition 2021

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
async-ffi.path = ".."
futures-task = "0.3"
