[package]
name = "executor"
version = "0.1.0"
authors = ["oxalica <oxalicc@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-ffi = { path = "../.." }
libloading = "0.7.0"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
