[package]
name = "plugin-rust"
version = "0.1.0"
authors = ["oxalica <oxalicc@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
async-ffi = { path = "../.." }
async-std = "1.9.0"
